--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "postcss-extend-rule": "^4.0.0"
+    "postcss-extend-rule": "^4.0.0",
+    "postcss-import": "^15.1.0"
   }
 }
